# temp-monitor

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  readme.md
.github/workflows/: release.yml
assets/: tray.rc
bundle/: README.md  install-service.bat  uninstall-service.bat
bundle/nsis/: installer.nsi
nsis/: installer.nsi
src/: main.rs
src/app/: layout.rs  main_window.rs  mod.rs  modal.rs  plot_window.rs  settings.rs  styles.rs  ui_main_window.rs
src/chart/: mod.rs  plotter.rs  series.rs
src/collectors/: cpu_collector.rs  cpu_frequency_collector.rs  cpu_temps.rs  frequency_collector.rs  lhm_collector.rs  mod.rs
src/model/: config.rs
src/utils/: csv_logger.rs  mod.rs
tests/: test_csv_logger.rs
