[package]
name = "temp-monitor"
version = "0.0.6"
repository = "https://github.com/ckapiainen/temp-monitor"
authors = ["ckapiainen"]
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "canvas", "advanced"] }
tokio = { version = "=1.45.1", features = ["rt", "time", "fs", "macros"] }
colored = "3.0.0"
plotters-iced = "0.11"
tray-icon = "0.14.3"
image = { version = "0.25", features = ["jpeg", "png"] }
sysinfo = "0.37.2"
csv = "1.4.0"
env_logger = "0.11.8"
wmi = "0.17.3"
lhm-client = "0.3.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
] }

