[package]
name = "temp-monitor"
version = "0.0.7"
repository = "https://github.com/ckapiainen/temp-monitor"
authors = ["ckapiainen"]
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "wgpu", "image"] }
tokio = { version = "=1.45.1", features = ["rt", "time", "fs", "macros"] }
colored = "3.0.0"
tray-icon = "0.14.3"
image = { version = "0.25", features = ["jpeg", "png"] }
sysinfo = "0.37.2"
csv = "1.4.0"
env_logger = "0.11.8"
wmi = "0.17.3"
lhm-client = "0.3.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.packager]
formats = ["nsis"]
identifier = "com.temp-monitor"
publisher = "ckapiainen"
product_name = "TempMon"
icons = ["assets/logo.ico"]
# bundled dependencies
resources = [
    "bundle/PawnIO_setup.exe",
    "bundle/lhm-service.exe",
    "bundle/lhm-bridge.dll",
]

[package.metadata.packager.nsis]
installMode = "both"
template = "bundle/nsis/installer.nsi"
languages = ["English"]